CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set_directory_properties (PROPERTIES EXCLUDE_FROM_ALL true)

project(glutess)

FILE(GLOB sources src/*.c)

IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF ()

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS (-DDEBUG)
ENDIF ()

IF (UNIX)
	SET(LINKER_FLAGS "-lm")
	SET(CMAKE_EXE_LINKER_FLAGS ${LINKER_FLAGS})
	SET(CMAKE_SHARED_LINKER_FLAGS ${LINKER_FLAGS})
ENDIF()

ADD_LIBRARY("${PROJECT_NAME}" STATIC ${sources})

TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}"
	PUBLIC
		"${CMAKE_CURRENT_SOURCE_DIR}/include"
)
IF (BUILD_SHARED_LIBS)
	TARGET_COMPILE_OPTIONS ("${PROJECT_NAME}" PUBLIC "-fPIC")
ENDIF ()

add_executable("${PROJECT_NAME}_test" "test/main.c")

TARGET_LINK_LIBRARIES("${PROJECT_NAME}_test"
	glutess
)

FIND_PACKAGE(vkvg)
FIND_PACKAGE(vkh)
FIND_PACKAGE(Vulkan REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)

FILE(GLOB vkvgsrc testvkvg/*.c)

if (vkvg_FOUND)
	add_executable("${PROJECT_NAME}_vkvg" ${vkvgsrc})

	TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}_vkvg" PRIVATE
		${Vulkan_INCLUDE_DIRS}
		${VKVG_INCLUDE_DIRS}
		${VKH_INCLUDE_DIRS}
		${GLFW3_INCLUDE_DIR}
	)
	TARGET_LINK_LIBRARIES("${PROJECT_NAME}_vkvg"
		${Vulkan_LIBRARIES}
		${VKVG_LIBRARIES}
		${VKH_LIBRARIES}
		${GLFW3_LIBRARY}
		glutess
		-lm
	)
ENDIF ()
