CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

project(glutess)

FILE(GLOB sources src/*.c)

IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF ()

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS (-DDEBUG)
ENDIF ()

IF (UNIX)
	SET(LINKER_FLAGS "-lm")
	SET(CMAKE_EXE_LINKER_FLAGS ${LINKER_FLAGS})
	SET(CMAKE_SHARED_LINKER_FLAGS ${LINKER_FLAGS})
ENDIF()

GET_DIRECTORY_PROPERTY (glutess_has_root_project PARENT_DIRECTORY)

ADD_LIBRARY("${PROJECT_NAME}" STATIC ${sources})

TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}"
	PUBLIC
		"${CMAKE_CURRENT_SOURCE_DIR}/include"
)

IF (NOT glutess_has_root_project)
	add_executable("${PROJECT_NAME}_test" "test/main.c" "test/common/tessellate.c")

	TARGET_LINK_LIBRARIES("${PROJECT_NAME}_test"
		glutess
	)
	TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}_test"
		PRIVATE
			"${CMAKE_CURRENT_SOURCE_DIR}/src"
			"${CMAKE_CURRENT_SOURCE_DIR}/test/common"
	)

	FIND_PACKAGE(vkvg)
	FIND_PACKAGE(vkh)
	FIND_PACKAGE(Vulkan REQUIRED)
	FIND_PACKAGE(GLFW3 REQUIRED)

	FILE(GLOB vkvgsrc testvkvg/*.c)

	if (vkvg_FOUND)
		add_executable("${PROJECT_NAME}_vkvg" ${vkvgsrc} "test/common/tessellate.c")

		TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}_vkvg" PRIVATE
			"${CMAKE_CURRENT_SOURCE_DIR}/test/common"
			"${CMAKE_CURRENT_SOURCE_DIR}/src"
			${Vulkan_INCLUDE_DIRS}
			${vkvg_INCLUDE_DIRS}
			${vkh_INCLUDE_DIRS}
			${GLFW3_INCLUDE_DIR}
		)
		TARGET_LINK_LIBRARIES("${PROJECT_NAME}_vkvg"
			${Vulkan_LIBRARIES}
			${vkvg_LIBRARIES}
			${vkh_LIBRARIES}
			${GLFW3_LIBRARY}
			glutess
			"$<$<BOOL:${UNIX}>:-lm>"
		)
	ENDIF ()
ENDIF ()
